# TypeRust

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  complete_test_output_2.txt  complete_test_output_3.txt  complete_test_output_4.txt  test_output.txt  test_output_func.txt  test_output_func_2.txt  test_output_func_3.txt
crates/ox_analyzer/: Cargo.toml
crates/ox_analyzer/src/: lib.rs  lints.rs
crates/ox_ast/: Cargo.toml
crates/ox_cli/: Cargo.toml
crates/ox_cli/src/: main.rs
crates/ox_codegen/: Cargo.toml
crates/ox_codegen/src/: lib.rs
crates/ox_common/: Cargo.toml
crates/ox_diagnostics/: Cargo.toml
crates/ox_diagnostics/src/: lib.rs
crates/ox_orchestrator/: Cargo.toml
crates/ox_orchestrator/src/: lib.rs
crates/ox_parser/: Cargo.toml
crates/ox_parser/src/: lib.rs
docs/architecture/decisions/: 0000-use-markdown-adr.md  0001-stack-and-monorepo.md
tests/: Cargo.toml
tests/fixtures/build_async_fn/: input.ts
tests/fixtures/build_simple_fn/: input.ts
tests/fixtures/e2e_complex/: input.ts
tests/fixtures/e2e_full_stack/: input.ts
tests/fixtures/e2e_real_api/: input.ts
tests/fixtures/equivalence/: class_state.ts
tests/fixtures/exec_class/: input.ts
tests/fixtures/executable_simple/: input.ts
tests/fixtures/modules_export/: input.ts
tests/fixtures/modules_import/: input.ts
tests/fixtures/test_http/: input.ts
tests/fixtures/test_stdlib/: input.ts
tests/src/: lib.rs  test_build.rs  test_compilation.rs  test_execute.rs  test_nestjs.rs  test_regression.rs  test_snapshots.rs  test_stdlib_exec.rs
(+20 files in other folders)
